password to .env

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -32,7 +32,7 @@ body {
    -ms-animation: fadein 2s; /* Internet Explorer */
     -o-animation: fadein 2s; /* Opera < 12.1 */
        animation: fadein 2s;
-       /* animation-delay: 2s; */
+      //  animation-delay: 2s;
 }
 .a {
   -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
